# goipxeboot

./: .gitignore  .releaserc.yml  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum  version.bzl
.github/workflows/: create_release.yml  release.yml
cmd/goipxeboot/: BUILD.bazel  main.go
cmd/goisoboot/: BUILD.bazel  main.go
example/: goipxeboot.yaml  goisoboot.yaml
pkg/cli/: BUILD.bazel  main.go  server.go  version.go
pkg/config/: BUILD.bazel  config.go
pkg/ipxe/: BUILD.bazel  handlers.go  matcher.go  matcher_test.go  options.go  routes.go  server.go
pkg/tftp/: BUILD.bazel  options.go  server.go
rpm/: BUILD.bazel  goipxeboot.service  goipxeboot.spec  goipxeboot.yaml
