bazel_dep(name = "gazelle", version = "0.40.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")

###############################################################################
# Go
###############################################################################

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.3")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_gorilla_mux", "com_github_pin_tftp_v3", "com_github_sirupsen_logrus", "com_github_spf13_cobra", "in_gopkg_yaml_v2")

###############################################################################
# RPM
###############################################################################
find_rpmbuild = use_extension(
    "@rules_pkg//toolchains/rpm:rpmbuild_configure.bzl",
    "find_system_rpmbuild_bzlmod",
)
use_repo(find_rpmbuild, "rules_pkg_rpmbuild")

register_toolchains(
    "@rules_pkg_rpmbuild//:all",
)
