load("@rules_pkg//pkg:rpm.bzl", "pkg_rpm")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//:version.bzl", "VERSION")

pkg_tar(
    name = "archive",
    srcs = [
        "goipxeboot.service",
        "goipxeboot.yaml",
    ],
    extension = "tar.gz",
)

pkg_rpm(
    name = "goipxeboot",
    architecture = "x86_64",
    data = [
        ":archive",
        "//cmd/goipxeboot:archive",
    ],
    release = "1",
    spec_file = "goipxeboot.spec",
    version = VERSION[1:] if VERSION.startswith("v") else VERSION,
    visibility = ["//visibility:public"],
)

genrule(
    name = "inspect_content",
    srcs = [":goipxeboot"],
    outs = ["content.txt"],
    cmd = "rpm2cpio $(locations :goipxeboot) | cpio -ivt >$@",
)
