load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "goipxeboot_lib",
    srcs = ["main.go"],
    importpath = "toni.systems/goipxeboot/cmd/goipxeboot",
    visibility = ["//visibility:private"],
    deps = ["//pkg/cli"],
)

go_binary(
    name = "goipxeboot",
    embed = [":goipxeboot_lib"],
    visibility = ["//visibility:public"],
)
