load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//:version.bzl", "VERSION")

go_library(
    name = "goipxeboot_lib",
    srcs = ["main.go"],
    importpath = "toni.systems/goipxeboot/cmd/goipxeboot",
    visibility = ["//visibility:private"],
    deps = ["//pkg/cli"],
)

go_binary(
    name = "goipxeboot",
    embed = [":goipxeboot_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
    x_defs = {
        "version": VERSION,
    },
)

pkg_tar(
    name = "archive",
    srcs = [":goipxeboot"],
    visibility = ["//visibility:public"],
)
