load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cli",
    srcs = [
        "main.go",
        "server.go",
        "version.go",
    ],
    importpath = "toni.systems/goipxeboot/pkg/cli",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "//pkg/ipxe",
        "//pkg/tftp",
        "@com_github_spf13_cobra//:cobra",
    ],
)
