load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "ipxe",
    srcs = [
        "handlers.go",
        "options.go",
        "routes.go",
        "server.go",
    ],
    importpath = "toni.systems/goipxeboot/pkg/ipxe",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "@com_github_gorilla_mux//:mux",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
