load("@rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:go_test file

go_library(
    name = "ipxe",
    srcs = [
        "handlers.go",
        "matcher.go",
        "options.go",
        "routes.go",
        "server.go",
    ],
    importpath = "toni.systems/goipxeboot/pkg/ipxe",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "@com_github_gorilla_mux//:mux",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "matcher_test",
    size = "small",
    srcs = ["matcher_test.go"],
    embed = [":ipxe"],
    deps = ["@com_github_stretchr_testify//assert"],
)
